--- a/src/style.css
+++ b/src/style.css
@@ -19,10 +19,11 @@ main {
   grid-template-columns: repeat(4, 1fr);
   grid-template-rows: repeat(3, auto);
   gap: 10px;
-
+margin-bottom: 4rem;
 }
 
 .image-container {
+  margin:0 auto;
   cursor: pointer;
   width: 150px;
   height: 150px;
@@ -32,4 +33,23 @@ main {
   -ms-border-radius: 25px;
   -o-border-radius: 25px;
   background-color: rgb(101, 202, 245);
+}
+.start{
+  display: flex;
+  margin:0 auto;
+  cursor: pointer;
+  border-radius: 25px;
+  width: 200px;
+  height: 50px;
+  background-color: rgb(247, 124, 124);
+  -webkit-border-radius: 25px;
+  -moz-border-radius: 25px;
+  -ms-border-radius: 25px;
+  -o-border-radius: 25px;
+  border: none;
+  align-items: center;
+  justify-content: center;
+  font-size: 20px;
+  font-weight: bold;
+  color: rgb(255, 255, 255);
 }
