--- a/src/style.css
+++ b/src/style.css
@@ -8,22 +8,24 @@
 
 body {
   min-height: 100dvh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-main {
-  padding: 150px 150px;
-}
 
 .container {
+
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: repeat(3, auto);
-  gap: 10px;
-margin-bottom: 4rem;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  gap: 3rem;
+  margin-bottom: 4rem;
+
+
 }
 
 .image-container {
-  margin:0 auto;
+  margin: 0 auto;
   cursor: pointer;
   width: 150px;
   height: 150px;
@@ -33,10 +35,12 @@ margin-bottom: 4rem;
   -ms-border-radius: 25px;
   -o-border-radius: 25px;
   background-color: rgb(101, 202, 245);
+
 }
-.start{
+
+.start {
   display: flex;
-  margin:0 auto;
+  margin: 0 auto;
   cursor: pointer;
   border-radius: 25px;
   width: 200px;
