--- a/src/style.css
+++ b/src/style.css
@@ -1,9 +1,6 @@
 * {
   background-color: rgb(187, 234, 234);
   box-sizing: border-box;
-  position: relative;
-
-
 }
 
 body {
@@ -17,8 +14,8 @@ body {
 .container {
 
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
-  gap: 3rem;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 1.5rem;
   margin-bottom: 4rem;
 
 
